src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-self-is-anon.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/ex3-both-anon-regions-self-is-anon.rs:17:19
   |
LL |     fn foo<'a>(&self, x: &Foo) -> &Foo {
   |                -         - let's call the lifetime of this reference `'1`
   |                |
   |                let's call the lifetime of this reference `'2`
LL |         if true { x } else { self } //~ ERROR lifetime mismatch
   |                   ^ function was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`

error: aborting due to previous error

